feature: add img

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
   <body>
     <div id="error-log"></div>
     <div id="ui-layer">
-      <div id="status" class="badge">🎄 Giang Sinh An Lanh 🎄</div>
+      <div id="status" class="badge">
+        🎄 Giang Sinh An Lanh 🧡Anh Yeu Em🧡 🎄
+      </div>
       <div class="guide">
         🖐 <b>Xòe:</b> Bung Quà & Đèn &nbsp;|&nbsp; 👌 <b>Pinch:</b> Xem ảnh
         &nbsp;|&nbsp; ✊ <b>Nắm:</b> Thu cây
@@ -347,7 +349,7 @@
         ctx.textAlign = "center";
         ctx.shadowColor = "#FF0000";
         ctx.shadowBlur = 40;
-        ctx.fillText("MERRY CHRISTMAS", 512, 130);
+        ctx.fillText("MERRY CHRISTMAS🧡", 512, 130);
 
         const tex = new THREE.CanvasTexture(canvas);
         const mat = new THREE.MeshBasicMaterial({
